Remove widget from host when deleting widgets on allocation
Use deleteAppWidgetLocked instead of removeWidgetLocked; the latter does
not remove the Widget object from the Host or notify the provider of
a deleted widget.

Bug: 411393685
Test: AppWidgetTest#testWidgetRemovalOnAllocate
Flag: EXEMPT BUGFIX
Change-Id: I17782a2ee71100e20f58ab83d2d2d1d85257445a